--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.29",
+    "preline": "^1.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "swiper": "^10.2.0",
     "tailwindcss": "3.3.3"
   }
 }
