--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-GITHUB_ID="68c0abdeb60144b91024"
-GITHUB_SECRET="0f205d07f7cb2cd4cb7a3940d4bdea515b7db61a"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="3BRAQWnfbEfhT3fnlrVMEHe2T7TG9ky4sfs//Xx+8Vc="
+
+FACEBOOK_ID="825795651617944"
+FACEBOOK_SECRET="860c71f2af949b05641df28de0647e50"
+
 GOOGLE_ID="608548260121-3h79tg0pnlch5772246e0nh1hkj1djeq.apps.googleusercontent.com"
 GOOGLE_SECRET="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"
