--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "export": "next build & next export",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
+    "@autocomplete/material-ui": "^0.0.17",
     "autoprefixer": "10.4.15",
+    "encoding": "^0.1.13",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^10.3.1",
+    "lodash": "^4.17.21",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
@@ -21,5 +26,10 @@
     "react-icons": "^4.11.0",
     "swiper": "^10.2.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.199",
+    "@types/react": "18.2.21",
+    "typescript": "5.2.2"
   }
 }
